--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -25,14 +25,20 @@
 .historyButtonRoot {
   width: 180px;
   border: 1px solid #d1d1d1;
+  color: #373435;
+  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #e0dd93 50%, #b9be10 100%);
 }
 
 .historyButtonRoot:hover {
   border: 1px solid #d1d1d1;
+  color: #373435;
+  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #b9be10 50%, #e0dd93 100%);
 }
 
 .historyButtonRoot:active {
   border: 1px solid #d1d1d1;
+  color: #373435;
+  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #e0dd93 50%, #b9be10 100%);
 }
 
 @media (max-width: 480px) {
